# markov-autocomplete

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: corpus.txt
header/: autocomplete_gui.h  linear_algebra_utils.h  markov_chain.h  markov_chain.tpp  nexttoken_markov_chain.h  node.h  string_utils.h  trie.h
src/: autocomplete_gui.cpp  nexttoken_markov_chain.cpp  trie.cpp
